#19: Link the logo to the demo page, not template provider website

--- a/app/views/index/index.jade
+++ b/app/views/index/index.jade
@@ -24,7 +24,7 @@ html(ng-app="TemplateDemo")
                         span.icon-bar
                         span.icon-bar
                         span.icon-bar
-                    a.navbar-brand(href="#{provider.url}", title="#{provider.name}")
+                    a.navbar-brand(href="/", title="#{provider.name}")
                         if provider.logo
                             img(src="#{provider.logo}")
                         else
