#22: Show the registration link at the account sign in page

--- a/app/views/account/signin.jade
+++ b/app/views/account/signin.jade
@@ -5,6 +5,11 @@ block content
         div.page-header
             h2 Account area
 
+        p
+            | You can&nbsp;
+            a(href="#{registerUrl}") register
+            | &nbsp;an account if you haven't one
+
         include ../partial/flash
 
     div.col-lg-4.col-lg-offset-4
