Prototype the memberships management

--- a/app/views/layouts/backend.jade
+++ b/app/views/layouts/backend.jade
@@ -36,6 +36,8 @@ html
                                 a(href="/admin/template") Templates
                             if ('root' == sessionUser.role)
                                 li
+                                    a(href="/admin/membership") Memberships
+                                li
                                     a(href="/admin/user") Administrators
 
                         ul.nav.navbar-nav.navbar-right
