--- a/app/views/account/dashboard.jade
+++ b/app/views/account/dashboard.jade
@@ -24,5 +24,5 @@ block content
                                     td #{subscription.title}
                                     td
                                         | #{subscription.expiration}&nbsp;
-                                        if (moment(subscription.expiration).isBefore())
+                                        if (moment(subscription.expiration, 'YYYY-MM-DD').isBefore())
                                             span.badge Expired
